// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputRadio > should render as required 1`] = `
<div>
  <radio-group
    class=""
  >
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        name="radio-group"
        required=""
        rtl="true"
        type="radio"
        value="0"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        name="radio-group"
        required=""
        rtl="true"
        type="radio"
        value="1"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        name="radio-group"
        required=""
        rtl="true"
        type="radio"
        value="2"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
</div>
`;

exports[`InputRadio > should render as required 2`] = `
<div>
  <radio-group
    class=""
  >
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        name="radio-group"
        rtl="false"
        type="radio"
        value="0"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        name="radio-group"
        rtl="false"
        type="radio"
        value="1"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        name="radio-group"
        rtl="false"
        type="radio"
        value="2"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
</div>
`;

exports[`InputRadio > should render with object array 1`] = `
<div>
  <radio-group
    class=""
  >
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        type="radio"
        value="0"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        type="radio"
        value="1"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        type="radio"
        value="2"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
</div>
`;

exports[`InputRadio > should render with string options 1`] = `
<div>
  <radio-group
    class=""
  >
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        type="radio"
        value="0"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        type="radio"
        value="1"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        type="radio"
        value="2"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
</div>
`;

exports[`InputRadio > should render with text, value objects  1`] = `
<div>
  <radio-group
    class=""
  >
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        type="radio"
        value="0"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        type="radio"
        value="1"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex flex-row items-center gap-2 rtl:flex-row-reverse"
    >
      <input
        type="radio"
        value="2"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
</div>
`;
